<resources>
    <string name="app_name">CalculatorFull</string>
    <string name="string_0">0</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="total">=</string>
    <string name="decimal">.</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="clear">clr</string>
</resources>
